--- a/components/ui/Hero/styles.scss
+++ b/components/ui/Hero/styles.scss
@@ -28,9 +28,6 @@
     }
   }
   &.hero-index {
-    height: 95vh;
-    margin-top: -$navHeight;
-    padding-top: $navHeight;
     background-color: $accentColorLight;
     // background-color: linear-gradient($accentColor, #FEC62E);
     // background: linear-gradient(#FFD667  10%, 50%,$accentColor 80%);
